# pinocchio

counter/: Cargo.toml
counter/src/: entrypoint.rs  error.rs  lib.rs
counter/src/instructions/: decrement.rs  increment.rs  initialize.rs  mod.rs
counter/src/state/: counter_state.rs  mod.rs  utils.rs
counter/tests/: unit.rs
counter/tests/common/: mod.rs
